--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
             <h4 class="Paria"</h4>
           </div>
         </div>
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500"><img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-2.fna.fbcdn.net/v/t39.30808-6/471436296_1517060609683279_2263114701480110537_n.jpg?_nc_cat=105&amp;ccb=1-7&amp;_nc_sid=cc71e4&amp;_nc_ohc=AuLtoaBOZggQ7kNvwG7HKXH&amp;_nc_oc=Adk3nUCEG1xtvCfqGiEQqbHS3IhgyjhZWSFobHAuMEEAqsmuGizbbK1ALe1Ukbx7NwY&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-2.fna&amp;_nc_gid=ZZ9WS_RRGJPax8bJbWkd6Q&amp;oh=00_AfJpXbqwobE2bRIW5Nl5guQkXtpLpUJnVeOzEh8zauudkQ&amp;oe=683C92E1"></div>
+          <div class="p-4">
+            <h4 class="Paria"</h4>
+          </div>
+        </div>
 
       </div>
     </div>
