--- a/index.html
+++ b/index.html
@@ -89,21 +89,22 @@
 <div class="bg-white shadow-md rounded-lg overflow-hidden">
           <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500"><img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-4.fna.fbcdn.net/v/t39.30808-6/470202211_1506700584052615_3224851981050548031_n.jpg?_nc_cat=108&amp;ccb=1-7&amp;_nc_sid=86c6b0&amp;_nc_ohc=5CZ01Q-W41wQ7kNvwHKb0Cf&amp;_nc_oc=AdkfEGPymJtDFLUB11Bod4IFiAYuxFJJI8wsn32HARejwtnkX5g3pnsvGdHgcnATRf8&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-4.fna&amp;_nc_gid=5shCkbPy8ufsKCGjPXsajA&amp;oh=00_AfIpfp9KRrFDEY31WDi4_FJbmqqkyqTUYpL_3co46ORrZQ&amp;oe=683B57B3"></div>
           <div class="p-4">
-            <h4 class="Paria"</h4>
+            <h4 class="graffiti text-xl text-pink-500">"Paria Graffiti Letters"</h4>
           </div>
         </div>
         <div class="bg-white shadow-md rounded-lg overflow-hidden">
           <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500"><img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-2.fna.fbcdn.net/v/t39.30808-6/471436296_1517060609683279_2263114701480110537_n.jpg?_nc_cat=105&amp;ccb=1-7&amp;_nc_sid=cc71e4&amp;_nc_ohc=AuLtoaBOZggQ7kNvwG7HKXH&amp;_nc_oc=Adk3nUCEG1xtvCfqGiEQqbHS3IhgyjhZWSFobHAuMEEAqsmuGizbbK1ALe1Ukbx7NwY&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-2.fna&amp;_nc_gid=ZZ9WS_RRGJPax8bJbWkd6Q&amp;oh=00_AfJpXbqwobE2bRIW5Nl5guQkXtpLpUJnVeOzEh8zauudkQ&amp;oe=683C92E1"></div>
           <div class="p-4">
-            <h4 class="Paria"</h4>
+            <h4 class="graffiti text-xl text-pink-500">"Paria Graffiti Letters"</h4>
           </div>
-        </div>
+          </div>
  <div class="bg-white shadow-md rounded-lg overflow-hidden">
           <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500"><img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-1.fna.fbcdn.net/v/t39.30808-6/471583552_1516333976422609_8172580434174026226_n.jpg?_nc_cat=104&amp;ccb=1-7&amp;_nc_sid=86c6b0&amp;_nc_ohc=swGiD8RHgokQ7kNvwGI6J1u&amp;_nc_oc=Adk-FfTPlAK9ZOwBPzWhD7xv8n82lmPkmL_9fYwL-mBbvLN9ySTFxyhDur3FQYAXE9Y&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-1.fna&amp;_nc_gid=zPz6Y8imMsK3LTYXhLzpPA&amp;oh=00_AfK3Ba-prcP1JdLzMZAIxtCRGFm11UG0nTPhAZivIJ1kyw&amp;oe=683C9ED2"></div>
           <div class="p-4">
             <h4 class="graffiti text-xl text-pink-500">"Paria Graffiti Letters"</h4>
           </div>
-        </div> <div class="bg-white shadow-md rounded-lg overflow-hidden">
+        </div> 
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
           <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500"><img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-2.fna.fbcdn.net/v/t39.30808-6/470198100_1507441320645208_3055646460759990625_n.jpg?_nc_cat=106&amp;ccb=1-7&amp;_nc_sid=86c6b0&amp;_nc_ohc=YzUNqXS37CMQ7kNvwGHkYt_&amp;_nc_oc=AdlQfO0GpUhE6ir5gx4YTQjzB3GQhYk3I0RRY9C32l67Ek-7h3HJOSmaIcQbxHs1VOA&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-2.fna&amp;_nc_gid=BTYiCumzT3LgqN3tCAFFnQ&amp;oh=00_AfK_BmRsIp3utq-yTEsRo6fDBH8ENDu9hCwhmZr4ZfGUiQ&amp;oe=683C76A6"></div>
           <div class="p-4">
             <h4 class="graffiti text-xl text-pink-500">"Paria Graffiti Letters"</h4>
