--- a/index.html
+++ b/index.html
@@ -1,58 +1,177 @@
-<!-- ... restul paginii tale neschimbat ... -->
-<section id="art" class="bg-gray-200 py-16">
-  <div class="container mx-auto px-4">
-    <h3 class="graffiti text-3xl text-pink-600 mb-10 text-center">Gallery</h3>
-    <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
-      <!-- Artwork Card -->
-      <div class="bg-white shadow-md rounded-lg overflow-hidden">
-        <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
-          <img src="https://scontent.fotp3-3.fna.fbcdn.net/v/t1.6435-9/69090893_10157522377859907_5574009278303305728_n.jpg?_nc_cat=101&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=4TT9ITn-UecQ7kNvwHvLQBf&amp;_nc_oc=AdnQd4rmxMNAOce_QJvzWVMpEBDEixCrnoZJUCGbtBWfeofo3TSuGujQAiK0RIbmuuM&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-3.fna&amp;_nc_gid=w9UDs8OqavufHoLCudDGuQ&amp;oh=00_AfKaqcAr78E9X_N4s5M8xspVXu07zZh5C0DyznE79-0rjw&amp;oe=685CE290" 
-          alt="Aurora PariaLys. Acryl auf Leinwand." class="zoomable w-full h-full object-cover"/>
-        </div>
-        <div class="p-4">
-          <h4 class="graffiti text-xl text-green-500">"Aurora PariaLys. Acryl auf Leinwand."</h4>
-        </div>
-      </div>
-      <!-- Repetă pentru fiecare imagine, doar adaugă clasa `zoomable` la fiecare <img> -->
-      <div class="bg-white shadow-md rounded-lg overflow-hidden">
-        <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
-          <img src="https://scontent.fotp3-4.fna.fbcdn.net/v/t1.6435-9/51616443_10157032633174907_3505856888895963136_n.jpg?_nc_cat=110&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=kfKDPMyB2GQQ7kNvwH37dnh&amp;_nc_oc=Adn1umehcSpa538MZIPCCSZ0WPTWrXs9u8g3X7HHYCPM_-7K6mvvW3CE_BczQoh2cwI&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-4.fna&amp;_nc_gid=mILrG5zrXiV6A8AMB5xvTg&amp;oh=00_AfL8CMg05_T0jBpzHVOr5YGhsEGigvfAKYem-xmWB9vc7A&amp;oe=685D160C" 
-          alt="Neue Leinwand new canvas" class="zoomable w-full h-full object-cover"/>
-        </div>
-        <div class="p-4">
-          <h4 class="graffiti text-xl text-pink-500">"Neue Leinwand new canvas 60 40;Arrow says "the King is cute"..."</h4>
-        </div>
-      </div>
-      <!-- ...restul cardurilor tale, fiecare <img> cu clasa zoomable ... -->
-      <!-- Exemplu pentru o a treia imagine -->
-      <div class="bg-white shadow-md rounded-lg overflow-hidden">
-        <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
-          <img src="https://scontent.fotp3-1.fna.fbcdn.net/v/t39.30808-6/468363361_10161957719374907_8523805980717489554_n.jpg?_nc_cat=107&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=Hlf_PF_ltckQ7kNvwEe5scp&amp;_nc_oc=Adlxya152dG6Ko79l8SCWb_-bA0HgiHAaBuINJkALPbEblo6PkQ3FYauDVi7arfXcLU&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-1.fna&amp;_nc_gid=Vdr7_61EBaNQcb3utLPvTg&amp;oh=00_AfJ6LWUKYy_ElYLq-rDoH7_6zkMH-Q9iodgt7b7hYJ0iHQ&amp;oe=683B7954" 
-          alt="Nature - Inkoqnito" class="zoomable w-full h-full object-cover"/>
-        </div>
-        <div class="p-4">
-          <h4 class="graffiti text-xl text-pink-500">"Nature - Inkoqnito; Aus dem November A2 bis auf die Farbe habe ich Kohle benutzt"</h4>
-        </div>
-      </div>
-      <!-- ... restul imaginilor la fel ... -->
-      <!-- Nu uita: fiecare <img> trebuie să aibă clasa zoomable -->
-    </div>
-  </div>
-  <!-- Modal (lightbox) -->
-  <div id="modal" style="display:none; position:fixed; z-index:999; left:0; top:0; width:100vw; height:100vh; background:rgba(0,0,0,0.8); justify-content:center; align-items:center;">
-    <img id="modal-img" src="" style="max-width:90vw; max-height:90vh; border-radius: 10px; box-shadow: 0 0 30px #000;">
-  </div>
-</section>
-<!-- ... restul paginii tale neschimbat ... -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jan Paria INK</title>
 
-<script>
-  document.querySelectorAll('.zoomable').forEach(img => {
-    img.addEventListener('click', function() {
-      document.getElementById('modal-img').src = this.src;
-      document.getElementById('modal').style.display = 'flex';
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Permanent+Marker&display=swap" rel="stylesheet">
+
+  <!-- Custom Font Config -->
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+    .graffiti {
+      font-family: 'Permanent Marker', cursive;
+    }
+  </style>
+</head>
+<body class="text-gray-800" style="background-image srchref: https://scontent.fotp3-2.fna.fbcdn.net/v/t39.30808-6/470198100_1507441320645208_3055646460759990625_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=86c6b0&_nc_ohc=YzUNqXS37CMQ7kNvwGHkYt_&_nc_oc=AdlQfO0GpUhE6ir5gx4YTQjzB3GQhYk3I0RRY9C32l67Ek-7h3HJOSmaIcQbxHs1VOA&_nc_zt=23&_nc_ht=scontent.fotp3-2.fna&_nc_gid=guCof9K87Hp-UH9YztaqYA&oh=00_AfIC_B41QAl4gFw8rGpZAvS-bUguf_HUYRtpjg12JKolqg&oe=683B2526; background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
+
+  <!-- Header -->
+  <header class="bg-black text-white shadow-md">
+    <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+      <h1 class="graffiti text-3xl text-pink-500">Jan Paria INK</h1>
+      <nav class="space-x-6 text-sm">
+        <a href="#home" class="hover:text-pink-400">Home</a>
+        <a href="#art" class="hover:text-pink-400">Art</a>
+        <a href="#about" class="hover:text-pink-400">About</a>
+        <a href="#contact" class="hover:text-pink-400">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero Section -->
+  <background srchref: <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-4.fna.fbcdn.net/v/t39.30808-6/470202211_1506700584052615_3224851981050548031_n.jpg?_nc_cat=108&amp;ccb=1-7&amp;_nc_sid=86c6b0&amp;_nc_ohc=5CZ01Q-W41wQ7kNvwHKb0Cf&amp;_nc_oc=AdkfEGPymJtDFLUB11Bod4IFiAYuxFJJI8wsn32HARejwtnkX5g3pnsvGdHgcnATRf8&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-4.fna&amp;_nc_gid=TFEFDqOG-7xEfy3liY_RFw&amp;oh=00_AfJtD1kvHyVtBTyVGxB_lNd7_3Wa0x8luB9EoJj7ZHJMmw&amp;oe=683B57B3">
+  <!-- About Section -->
+  <section id="about" class="container mx-auto px-4 py-16">
+    <h3 class="graffiti text-3xl text-pink-600 mb-6">About Jan</h3>
+    <div class="background srchref: <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-2.fna.fbcdn.net/v/t39.30808-6/470198100_1507441320645208_3055646460759990625_n.jpg?_nc_cat=106&amp;ccb=1-7&amp;_nc_sid=86c6b0&amp;_nc_ohc=YzUNqXS37CMQ7kNvwGHkYt_&amp;_nc_oc=AdlQfO0GpUhE6ir5gx4YTQjzB3GQhYk3I0RRY9C32l67Ek-7h3HJOSmaIcQbxHs1VOA&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-2.fna&amp;_nc_gid=guCof9K87Hp-UH9YztaqYA&amp;oh=00_AfIC_B41QAl4gFw8rGpZAvS-bUguf_HUYRtpjg12JKolqg&amp;oe=683B2526">
+      <p>
+        Jan Paria is a German-based graffiti artist known for blending urban chaos with vibrant emotion. He began tagging walls in the early 2000s and evolved into a respected visual storyteller. His work explores the intersection of street culture, politics, and inner landscapes. Every piece is a declaration, a whisper, a riot.
+      </p>
+    </div>
+  </section>
+
+  <!-- Art Gallery Section -->
+  <section id="art" class="bg-gray-200 py-16">
+    <div class="container mx-auto px-4">
+      <h3 class="graffiti text-3xl text-pink-600 mb-10 text-center">Gallery</h3>
+      <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
+        <!-- Artwork Card -->
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-3.fna.fbcdn.net/v/t1.6435-9/69090893_10157522377859907_5574009278303305728_n.jpg?_nc_cat=101&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=4TT9ITn-UecQ7kNvwHvLQBf&amp;_nc_oc=AdnQd4rmxMNAOce_QJvzWVMpEBDEixCrnoZJUCGbtBWfeofo3TSuGujQAiK0RIbmuuM&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-3.fna&amp;_nc_gid=w9UDs8OqavufHoLCudDGuQ&amp;oh=00_AfKaqcAr78E9X_N4s5M8xspVXu07zZh5C0DyznE79-0rjw&amp;oe=685CE290">
+          </div>
+          <div class="p-4">
+            <h4 class="graffiti text-xl text-green-500">"Aurora PariaLys. Acryl auf Leinwand."</h4>
+          </div>
+        </div>
+
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-4.fna.fbcdn.net/v/t1.6435-9/51616443_10157032633174907_3505856888895963136_n.jpg?_nc_cat=110&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=kfKDPMyB2GQQ7kNvwH37dnh&amp;_nc_oc=Adn1umehcSpa538MZIPCCSZ0WPTWrXs9u8g3X7HHYCPM_-7K6mvvW3CE_BczQoh2cwI&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-4.fna&amp;_nc_gid=mILrG5zrXiV6A8AMB5xvTg&amp;oh=00_AfL8CMg05_T0jBpzHVOr5YGhsEGigvfAKYem-xmWB9vc7A&amp;oe=685D160C">
+          </div>
+          <div class="p-4">
+            <h4 class="graffiti text-xl text-pink-500">"Neue Leinwand new canvas 60 40;Arrow says "the King is cute"..."</h4>
+          </div>
+        </div>
+
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-1.fna.fbcdn.net/v/t39.30808-6/468363361_10161957719374907_8523805980717489554_n.jpg?_nc_cat=107&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=Hlf_PF_ltckQ7kNvwEe5scp&amp;_nc_oc=Adlxya152dG6Ko79l8SCWb_-bA0HgiHAaBuINJkALPbEblo6PkQ3FYauDVi7arfXcLU&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-1.fna&amp;_nc_gid=Vdr7_61EBaNQcb3utLPvTg&amp;oh=00_AfJ6LWUKYy_ElYLq-rDoH7_6zkMH-Q9iodgt7b7hYJ0iHQ&amp;oe=683B7954">
+          </div>
+          <div class="p-4">
+            <h4 class="graffiti text-xl text-pink-500">"Nature - Inkoqnito; Aus dem November A2 bis auf die Farbe habe ich Kohle benutzt"</h4>
+          </div>
+        </div>
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-1.fna.fbcdn.net/v/t39.30808-6/470494722_10162213647179907_2037212564878095590_n.jpg?_nc_cat=104&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=YxAzNZqduCAQ7kNvwHm9XTC&amp;_nc_oc=AdmhwEIiG6M1QOjxYpCFg4wh_m3ZpCMaDS59A8agITvJdREc_3c13H7RqDSb98EGz2k&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-1.fna&amp;_nc_gid=95c8arhI9arUFYnwLWhWmA&amp;oh=00_AfLgLghhAYMdI6QGdJolbNS3IC4zoMAfyp2Ew79d7bDIKg&amp;oe=683B800A">
+          </div>
+          <div class="p-4">
+            <h4 class="graffiti text-xl text-green-500">"Charles Manson Fuck Flower Power"</h4>
+          </div>
+        </div>
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-3.fna.fbcdn.net/v/t1.6435-9/29196717_10156217575069907_832015713051869184_n.jpg?_nc_cat=101&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=C8ta3Nw1HtoQ7kNvwGnxlgj&amp;_nc_oc=AdnJCWRxgr4FjWWAM_w7rfJt97acBZljpynYNy1qhym_UzusQd9ALETj8mLllBAe05w&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-3.fna&amp;_nc_gid=OQ80MA2oDcjRLe5vyUjkYg&amp;oh=00_AfLZrr41oK2uYxhcINjxqvWOvNofHIGoz6i4uNDj4wRjZQ&amp;oe=685D0AF5">
+          </div>
+          <div class="p-4">
+            <h4 class="graffiti text-xl text-pink-500">"Hunter/Depp/Gonzo 40/60 Acryl"</h4>
+          </div>
+        </div>
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-4.fna.fbcdn.net/v/t39.30808-6/470202211_1506700584052615_3224851981050548031_n.jpg?_nc_cat=108&amp;ccb=1-7&amp;_nc_sid=86c6b0&amp;_nc_ohc=5CZ01Q-W41wQ7kNvwHKb0Cf&amp;_nc_oc=AdkfEGPymJtDFLUB11Bod4IFiAYuxFJJI8wsn32HARejwtnkX5g3pnsvGdHgcnATRf8&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-4.fna&amp;_nc_gid=5shCkbPy8ufsKCGjPXsajA&amp;oh=00_AfIpfp9KRrFDEY31WDi4_FJbmqqkyqTUYpL_3co46ORrZQ&amp;oe=683B57B3">
+          </div>
+          <div class="p-4">
+            <h4 class="graffiti text-xl text-pink-500">"Paria Graffiti Letters"</h4>
+          </div>
+        </div>
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-2.fna.fbcdn.net/v/t39.30808-6/471436296_1517060609683279_2263114701480110537_n.jpg?_nc_cat=105&amp;ccb=1-7&amp;_nc_sid=cc71e4&amp;_nc_ohc=AuLtoaBOZggQ7kNvwG7HKXH&amp;_nc_oc=Adk3nUCEG1xtvCfqGiEQqbHS3IhgyjhZWSFobHAuMEEAqsmuGizbbK1ALe1Ukbx7NwY&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-2.fna&amp;_nc_gid=ZZ9WS_RRGJPax8bJbWkd6Q&amp;oh=00_AfJpXbqwobE2bRIW5Nl5guQkXtpLpUJnVeOzEh8zauudkQ&amp;oe=683C92E1">
+          </div>
+          <div class="p-4">
+            <h4 class="graffiti text-xl text-pink-500">"Paria Graffiti Letters"</h4>
+          </div>
+        </div>
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-1.fna.fbcdn.net/v/t39.30808-6/471583552_1516333976422609_8172580434174026226_n.jpg?_nc_cat=104&amp;ccb=1-7&amp;_nc_sid=86c6b0&amp;_nc_ohc=swGiD8RHgokQ7kNvwGI6J1u&amp;_nc_oc=Adk-FfTPlAK9ZOwBPzWhD7xv8n82lmPkmL_9fYwL-mBbvLN9ySTFxyhDur3FQYAXE9Y&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-1.fna&amp;_nc_gid=zPz6Y8imMsK3LTYXhLzpPA&amp;oh=00_AfK3Ba-prcP1JdLzMZAIxtCRGFm11UG0nTPhAZivIJ1kyw&amp;oe=683C9ED2">
+          </div>
+          <div class="p-4">
+            <h4 class="graffiti text-xl text-pink-500">"Paria Graffiti Letters"</h4>
+          </div>
+        </div> 
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-2.fna.fbcdn.net/v/t39.30808-6/470198100_1507441320645208_3055646460759990625_n.jpg?_nc_cat=106&amp;ccb=1-7&amp;_nc_sid=86c6b0&amp;_nc_ohc=YzUNqXS37CMQ7kNvwGHkYt_&amp;_nc_oc=AdlQfO0GpUhE6ir5gx4YTQjzB3GQhYk3I0RRY9C32l67Ek-7h3HJOSmaIcQbxHs1VOA&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-2.fna&amp;_nc_gid=BTYiCumzT3LgqN3tCAFFnQ&amp;oh=00_AfK_BmRsIp3utq-yTEsRo6fDBH8ENDu9hCwhmZr4ZfGUiQ&amp;oe=683C76A6">
+          </div>
+          <div class="p-4">
+            <h4 class="graffiti text-xl text-pink-500">"Paria Graffiti Letters"</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal pentru imagine mărită -->
+    <div id="modal" style="display:none; position:fixed; z-index:9999; left:0; top:0; width:100vw; height:100vh; background:rgba(0,0,0,0.8); justify-content:center; align-items:center;">
+      <img id="modal-img" src="" style="max-width:90vw; max-height:90vh; border-radius:10px; box-shadow:0 0 30px #000;">
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="container mx-auto px-4 py-16">
+    <h3 class="graffiti text-3xl text-pink-600 mb-6">Get in Touch</h3>
+    <form class="bg-white shadow-lg rounded-lg p-6 space-y-4 max-w-xl mx-auto">
+      <div>
+        <label class="block text-sm font-semibold">Name</label>
+        <input type="text" class="w-full border border-gray-300 rounded px-3 py-2" placeholder="Your name" />
+      </div>
+      <div>
+        <label class="block text-sm font-semibold">Email</label>
+        <input type="email" class="w-full border border-gray-300 rounded px-3 py-2" placeholder="you@example.com" />
+      </div>
+      <div>
+        <label class="block text-sm font-semibold">Message</label>
+        <textarea class="w-full border border-gray-300 rounded px-3 py-2" rows="4" placeholder="Say something..."></textarea>
+      </div>
+      <button type="submit" class="bg-pink-600 hover:bg-pink-700 text-white px-4 py-2 rounded">Send ✉️</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-black text-white text-center py-6 mt-10">
+    <p class="text-sm">&copy; 2025 Jan Paria INK. All rights reserved.</p>
+  </footer>
+
+  <!-- Script pentru mărire imagine -->
+  <script>
+    document.querySelectorAll('.zoomable').forEach(img => {
+      img.addEventListener('click', function() {
+        document.getElementById('modal-img').src = this.src;
+        document.getElementById('modal').style.display = 'flex';
+      });
     });
-  });
-  document.getElementById('modal').onclick = function() {
-    this.style.display = 'none';
-  }
-</script>
+    document.getElementById('modal').onclick = function(e) {
+      if (e.target === this) this.style.display = 'none';
+    }
+  </script>
+</body>
+</html>
