--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
   </style>
 </head>
-<body class="text-gray-800" style="background-image srchref: https://scontent.fotp3-2.fna.fbcdn.net/v/t39.30808-6/470198100_1507441320645208_3055646460759990625_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=86c6b0&_nc_ohc=YzUNqXS37CMQ7kNvwGHkYt_&_nc_oc=AdlQfO0GpUhE6ir5gx4YTQjzB3GQhYk3I0RRY9C32l67Ek-7h3HJOSmaIcQbxHs1VOA&_nc_zt=23&_nc_ht=scontent.fotp3-2.fna&_nc_gid=guCof9K87Hp-UH9YztaqYA&oh=00_AfIC_B41QAl4gFw8rGpZAvS-bUguf_HUYRtpjg12JKolqg&oe=683B2526; background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
+<body class="text-gray-800" style="background-image: url('https://placehold.co/1200x800?text=Background'); background-size: cover;">
 
   <!-- Header -->
   <header class="bg-black text-white shadow-md">
