--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <div class="bg-white shadow-md rounded-lg overflow-hidden">
           <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
-            <img src="images/INK.jpg" alt="Photo">
+            <img src="C:\Users\<georg>\Desktop\jan paria\images\INK.jpg" alt="Photo">
           <div class="p-4">
             <h4 class="graffiti text-xl text-pink-500">"Nature - Inkoqnito; Aus dem November A2 bis auf die Farbe habe ich Kohle benutzt"</h4>
           </div>
