--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
         <div class="bg-white shadow-md rounded-lg overflow-hidden">
           <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
-            <img src="C:\Users\<georg>\Desktop\jan paria\images\INK.jpg">
-          <div class="p-4">
+<img src ahref:C:\Users\<georg>\Desktop\JanParia\images\INK.png> 
+            <div class="p-4">
             <h4 class="graffiti text-xl text-pink-500">"Nature - Inkoqnito; Aus dem November A2 bis auf die Farbe habe ich Kohle benutzt"</h4>
           </div>
-        </div>
+           </div>
         <div class="bg-white shadow-md rounded-lg overflow-hidden">
           <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
             <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-1.fna.fbcdn.net/v/t39.30808-6/470494722_10162213647179907_2037212564878095590_n.jpg?_nc_cat=104&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=YxAzNZqduCAQ7kNvwHm9XTC&amp;_nc_oc=AdmhwEIiG6M1QOjxYpCFg4wh_m3ZpCMaDS59A8agITvJdREc_3c13H7RqDSb98EGz2k&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-1.fna&amp;_nc_gid=95c8arhI9arUFYnwLWhWmA&amp;oh=00_AfLgLghhAYMdI6QGdJolbNS3IC4zoMAfyp2Ew79d7bDIKg&amp;oe=683B800A">
