--- a/index.html
+++ b/index.html
@@ -55,38 +55,38 @@
       <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
         <!-- Artwork Card -->
         <div class="bg-white shadow-md rounded-lg overflow-hidden">
-          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
-            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-3.fna.fbcdn.net/v/t1.6435-9/69090893_10157522377859907_5574009278303305728_n.jpg?_nc_cat=101&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=4TT9ITn-UecQ7kNvwHvLQBf&amp;_nc_oc=AdnQd4rmxMNAOce_QJvzWVMpEBDEixCrnoZJUCGbtBWfeofo3TSuGujQAiK0RIbmuuM&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-3.fna&amp;_nc_gid=w9UDs8OqavufHoLCudDGuQ&amp;oh=00_AfKaqcAr78E9X_N4s5M8xspVXu07zZh5C0DyznE79-0rjw&amp;oe=685CE290">
-          </div>
-          <div class="p-4">
-            <h4 class="graffiti text-xl text-green-500">"Aurora PariaLys. Acryl auf Leinwand."</h4>
-          </div>
-        </div>
+  <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+    <img src="auroraparealys.jpg" alt="Nature - Inkoqnito; Kohle & Acryl" class="zoomable">
+  </div>
+  <div class="p-4">
+    <h4 class="graffiti text-xl text-pink-500">"Aurora PariaLys"</h4>
+  </div>
+</div>
+        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+  <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+    <img src="INK.jpg" alt="Nature - Inkoqnito; Kohle & Acryl" class="zoomable">
+  </div>
+  <div class="p-4">
+    <h4 class="graffiti text-xl text-pink-500">"Nature"</h4>
+  </div>
+</div>
 
-        <div class="bg-white shadow-md rounded-lg overflow-hidden">
-          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
-            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-4.fna.fbcdn.net/v/t1.6435-9/51616443_10157032633174907_3505856888895963136_n.jpg?_nc_cat=110&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=kfKDPMyB2GQQ7kNvwH37dnh&amp;_nc_oc=Adn1umehcSpa538MZIPCCSZ0WPTWrXs9u8g3X7HHYCPM_-7K6mvvW3CE_BczQoh2cwI&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-4.fna&amp;_nc_gid=mILrG5zrXiV6A8AMB5xvTg&amp;oh=00_AfL8CMg05_T0jBpzHVOr5YGhsEGigvfAKYem-xmWB9vc7A&amp;oe=685D160C">
-          </div>
-          <div class="p-4">
-            <h4 class="graffiti text-xl text-pink-500">"Neue Leinwand new canvas 60 40;Arrow says "the King is cute"..."</h4>
-          </div>
-        </div>
-
-        <div class="bg-white shadow-md rounded-lg overflow-hidden">
-          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
-<img src ahref: "C:\Users\<georg>\Desktop\JanParia\images\INK.png">
-            <div class="p-4">
-            <h4 class="graffiti text-xl text-pink-500">"Nature - Inkoqnito; Aus dem November A2 bis auf die Farbe habe ich Kohle benutzt"</h4>
-          </div>
-           </div>
-        <div class="bg-white shadow-md rounded-lg overflow-hidden">
-          <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
-            <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-1.fna.fbcdn.net/v/t39.30808-6/470494722_10162213647179907_2037212564878095590_n.jpg?_nc_cat=104&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=YxAzNZqduCAQ7kNvwHm9XTC&amp;_nc_oc=AdmhwEIiG6M1QOjxYpCFg4wh_m3ZpCMaDS59A8agITvJdREc_3c13H7RqDSb98EGz2k&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-1.fna&amp;_nc_gid=95c8arhI9arUFYnwLWhWmA&amp;oh=00_AfLgLghhAYMdI6QGdJolbNS3IC4zoMAfyp2Ew79d7bDIKg&amp;oe=683B800A">
-          </div>
-          <div class="p-4">
-            <h4 class="graffiti text-xl text-green-500">"Charles Manson Fuck Flower Power"</h4>
-          </div>
-        </div>
+       <div class="bg-white shadow-md rounded-lg overflow-hidden">
+  <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+    <img src="INK.jpg" alt="Nature - Inkoqnito; Kohle & Acryl" class="zoomable">
+  </div>
+  <div class="p-4">
+    <h4 class="graffiti text-xl text-pink-500">"Nature"</h4>
+  </div>
+</div>
+       <div class="bg-white shadow-md rounded-lg overflow-hidden">
+  <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
+    <img src="fuckflower.jpg" alt="Nature - Inkoqnito; Kohle & Acryl" class="zoomable">
+  </div>
+  <div class="p-4">
+    <h4 class="graffiti text-xl text-pink-500">"Charles Manson Fuck Flower Power"</h4>
+  </div>
+</div>
         <div class="bg-white shadow-md rounded-lg overflow-hidden">
           <div class="bg-gray-300 h-48 flex items-center justify-center text-gray-500">
             <img data-visualcompletion="media-vc-image" alt="No photo description available." class="x168nmei x13lgxp2 x5pf9jr xo71vjh x1bwycvy x193iq5w x4fas0m x19kjcj4 zoomable" referrerpolicy="origin-when-cross-origin" src="https://scontent.fotp3-3.fna.fbcdn.net/v/t1.6435-9/29196717_10156217575069907_832015713051869184_n.jpg?_nc_cat=101&amp;ccb=1-7&amp;_nc_sid=127cfc&amp;_nc_ohc=C8ta3Nw1HtoQ7kNvwGnxlgj&amp;_nc_oc=AdnJCWRxgr4FjWWAM_w7rfJt97acBZljpynYNy1qhym_UzusQd9ALETj8mLllBAe05w&amp;_nc_zt=23&amp;_nc_ht=scontent.fotp3-3.fna&amp;_nc_gid=OQ80MA2oDcjRLe5vyUjkYg&amp;oh=00_AfLZrr41oK2uYxhcINjxqvWOvNofHIGoz6i4uNDj4wRjZQ&amp;oe=685D0AF5">
